Fix select2 dropdown z-index. Refs #11949

--- a/app/assets/stylesheets/components/_select2.sass
+++ b/app/assets/stylesheets/components/_select2.sass
@@ -27,7 +27,7 @@
 
 .select2-container--bootstrap
   .select2-dropdown
-    z-index: 2050
+    z-index: 2053
   .select2-dropdown--above
     box-shadow: 0 -3px 6px rgba(0, 0, 0, 0.175)
 
